Utworzono za pomocą Colaboratory

--- a/szablon.ipynb
+++ b/szablon.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9hzHbDRSYfuzmu+BfgYxt",
+      "authorship_tag": "ABX9TyPW7HpEiKAu+8w064rp/vUH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,11 @@
         "    console.log(\"Connect pushed\"); \n",
         "    document.querySelector(\"#top-toolbar > colab-connect-button\").shadowRoot.querySelector(\"#connect\").click() \n",
         "}\n",
-        "intervalTiming = setInterval(ConnectButton,60000);\n"
+        "intervalTiming = setInterval(ConnectButton,60000);\n",
+        "\n",
+        "\n",
+        "\n",
+        "ffff\n"
       ],
       "metadata": {
         "id": "A35SFknlj1fZ"
